<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginUIDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">欢迎登陆加拿大北游郑州校区</string>
    <string name="info_name">用户名：</string>
    <string name="info_input_name">请输入用户姓名</string>
    <string name="info_pass">密码：</string>
    <string name="info_input_pass">请输入密码</string>
    <string name="button_text">登陆</string>
    <string name="remenber_text">记住密码</string>
     <string name="auto_text">自动登陆</string>
    <string name="reg_text">还没有帐号，猛点这点注册！！</string>
</resources>